WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174595
NETWORK_SESSION does not need didReceiveAuthenticationChallenge(uint64_t, uint64_t, const AuthenticationChallenge&)
https://bugs.webkit.org/show_bug.cgi?id=174595
Summary
NETWORK_SESSION does not need didReceiveAuthenticationChallenge(uint64_t, uin...
Chris Dumez
Reported
2017-07-17 14:45:06 PDT
NETWORK_SESSION does not need didReceiveAuthenticationChallenge(uint64_t, uint64_t, const AuthenticationChallenge&).
Attachments
Patch
(3.34 KB, patch)
2017-07-17 14:45 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews122 for ios-simulator-wk2
(963.42 KB, application/zip)
2017-07-17 16:15 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-07-17 14:45:58 PDT
Created
attachment 315717
[details]
Patch
Build Bot
Comment 2
2017-07-17 16:15:13 PDT
Comment on
attachment 315717
[details]
Patch
Attachment 315717
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4137753
New failing tests: imported/w3c/IndexedDB-private-browsing/idbfactory_open12.html
Build Bot
Comment 3
2017-07-17 16:15:14 PDT
Created
attachment 315725
[details]
Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Chris Dumez
Comment 4
2017-07-17 16:55:31 PDT
Comment on
attachment 315717
[details]
Patch Clearing flags on attachment: 315717 Committed
r219587
: <
http://trac.webkit.org/changeset/219587
>
Chris Dumez
Comment 5
2017-07-17 16:55:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug