NETWORK_SESSION does not need didReceiveAuthenticationChallenge(uint64_t, uint64_t, const AuthenticationChallenge&) https://bugs.webkit.org/show_bug.cgi?id=174595

Reviewed by Alex Christensen.

* Shared/Authentication/AuthenticationManager.cpp:
(WebKit::AuthenticationManager::didReceiveAuthenticationChallenge):
* Shared/Authentication/AuthenticationManager.h:

Canonical link: https://commits.webkit.org/191403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219587 268f45cc-cd09-0410-ab3c-d52691b4dbfc